# websocket-fastapi

./: README.md  pyproject.toml
src/websocket_fastapi/: main.py  sample.html  sample2.html
