[project]
name = "websocket-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kosuke222naito", email = "kosuke.naito.engineer@gmail.com" }
]
dependencies = [
    "fastapi>=0.111.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/websocket_fastapi"]
